--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "hat": "0.0.3",
     "socket.io": "^1.4.8",
     "socket.io-client": "^1.4.8",
+    "webworkify": "^1.3.0",
     "yo-yo": "^1.2.2"
   },
   "devDependencies": {
